Cache user agents per IP

https://bugzilla.gnome.org/show_bug.cgi?id=653894